feat: Send WiFi SSID, storage, and RAM in heartbeat
- Heartbeat now includes WiFi network name (SSID)
- Reports free storage and RAM for dashboard display
- Added HTTP server for web display access at device IP
- Web display accessible while connected to WiFi

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -15,6 +15,7 @@ idf_component_register(
         "storage/storage_manager.c"
         "storage/security_manager.c"
         "network/wifi_manager.c"
+        "network/web_display.c"
         "network/api_client.c"
         "ui/ui_manager.c"
         "ui/text_renderer.c"
